# AWS-Flask-App

./: .gitignore  README.md  environment.py  flaskapp.py  helpers.py  keys.env  keys.env.example  pyproject.toml  requirements.txt  users.db
configs/: environment.env.example
static/: style.css
templates/: index.html  login.html  profile.html  signup.html
